--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "node index.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.91.1",
     "cors": "^2.8.5",
+    "date-fns-tz": "^3.2.0",
+    "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "nanoid": "^5.0.7"
   }
